--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "babel extend --out-dir lib"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.22.9",
-    "@babel/core": "^7.22.9",
-    "@babel/preset-env": "^7.22.9"
-  }
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "compile": "babel extendCustomWebData.js --out-dir output && babel extend --out-dir output/extend && prettier --write output/"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.22.9",
+        "@babel/core": "^7.22.9",
+        "@babel/preset-env": "^7.22.9"
+    },
+    "dependencies": {
+        "eslint": "^8.46.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-prettier": "^5.0.0",
+        "prettier": "^3.0.1"
+    }
 }
