prettier out 시 .gitignore 참조하는 명령어 수정 .prettierignore 추가 및 out 시 해당 파일 참조하도록 진행

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "compile": "babel extendCustomWebData.js --out-dir output && babel extend --out-dir output/extend && prettier --write output/"
+        "compile": "babel extendCustomWebData.js --out-dir target && babel extend --out-dir target/extend && prettier --write --ignore-path .prettierignore target/"
     },
     "devDependencies": {
         "@babel/cli": "^7.22.9",
