-   파일명 변경 extendCustomWebData.js -> main.js -   폴더 구조 변경 -> vendorCustom/ -> vendorCustom/plugins/extendCustomWebData -   폴더 구조 변경에 따라 package.json script run complie 명령어 변경 -   requirejs 호출 방식 제거

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "compile": "babel extendCustomWebData.js --out-dir target/vendorCustom && babel extend --out-dir target/vendorCustom/extend && prettier --write --ignore-path .prettierignore target/"
+        "compile": "babel main.js --out-dir target/vendorCustom/plugins/extendCustomWebData && babel modules --out-dir target/vendorCustom/plugins/extendCustomWebData/modules && prettier --write --ignore-path .prettierignore target/"
     },
     "devDependencies": {
         "@babel/cli": "^7.22.9",
