--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,24 @@
 {
-    "plugins": [],
+    "plugins": ["import"],
     "extends": ["plugin:prettier/recommended", "eslint:recommended"],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
+    "globals": {
+        "$customWebData": false,
+        "$u": false,
+        "$nst": false,
+        "staticProperties": false,
+        "$efi": false
+    },
     "env": {
         "browser": true,
-        "es2021": true
+        "commonjs": true,
+        "es2021": true,
+        "jquery": true
     },
-    "ignorePatterns": ["node_modules/"],
+    "ignorePatterns": ["node_modules/", "$uPlugins.js"],
     "rules": {
         "no-console": "off",
         "prettier/prettier": [
@@ -29,6 +38,6 @@
             }
         ],
         "lines-between-class-members": ["error", "always", {"exceptAfterSingleLine": true}],
-        "no-explicit-any": "0"
+        "no-explicit-any": 0
     }
 }
