--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "compile": "babel main.js --out-dir target/vendorCustom/plugins/extendCustomWebData && babel modules --out-dir target/vendorCustom/plugins/extendCustomWebData/modules && prettier --write --ignore-path .prettierignore target/"
+        "compile": "babel ./dev --out-dir ./src/main/resources/META-INF/resources/webjars/vendorCustom/plugins/unidocuOptionExpansion && prettier --write --ignore-path .prettierignore ./"
     },
     "devDependencies": {
         "@babel/cli": "^7.22.9",
         "@babel/core": "^7.22.9",
-        "@babel/preset-env": "^7.22.9"
+        "@babel/preset-env": "^7.22.9",
+        "eslint-plugin-import": "^2.29.1"
     },
     "dependencies": {
         "eslint": "^8.46.0",
