--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.unipost.unidocu-plugins</groupId>
     <artifactId>unidocuOptionExpansion</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.1-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -81,7 +81,10 @@
                         <configuration>
                             <resources>
                                 <resource>
-                                    <directory>${project.basedir}/src/main/resources</directory>
+                                    <directory>${project.basedir}/out/src/main/resources</directory>
+                                    <!--<includes>
+                                        <include>./$uPlugins.j</include>
+                                    </includes>-->
                                     <excludes>
                                         <exclude>**/test/**</exclude>
                                         <exclude>**/types/**</exclude>
